<resources>
    <string name="app_name">Institute Registration</string>
    <string name="institute_registration">Institute Registration</string>
    <string name="institute_name">Institute Name</string>
    <string name="institute_manager">Institute Manager</string>
    <string name="institute_managerPro">Manager</string>
    <string name="institute_code">Institute Code</string>
    <string name="institute_address">Institute Address</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="hotline">Hotline</string>
    <string name="description">Description</string>
    <string name="register_institute">Register Institute</string>
    <string name="todo">TODO</string>
    <!--  Divya  -->
    <string name="address">Address</string>
    <string name="full_name">Full_name</string>
    <string name="female">Female</string>
    <string name="confirm_password">Confirm_password</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="register">Register</string>
    <string name="subject">Subject</string>
    <string name="login">Login</string>
    <string name="institute">Institute</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="phone_number">Phone_number</string>
    <string name="username">Username</string>
    <string name="register_teacher">Register</string>
    <string name="create_classesIns">Create Classes</string>
    <string name="register_studentsIns">Register Students</string>
    <string name="add_class_managersIns">Add Class Managers</string>
    <string name="title_activity_institute_manage__nav">InstituteManage_Nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="staff_managerInsNav">Staff Manager</string>
    <string name="ProfileDetailsInsNav">Communicate</string>
    <string name="staff_managerNav">Staff Manager</string>
    <string name="profile_detailsINSNAV">Profile Details</string>
    <string name="institute_profileInsNAv">Institute Profile</string>
    <string name="title_activity_student_navigation">StudentNavigation</string>
    <string name="my_classesSTDnav">My Classes</string>
    <string name="ProfileDetailsSTDNav">My Profile</string>
    <string name="mark_attendanceSTDNav">Mark Attendance</string>
    <string name="pay_feesSTDNav">Pay Fees</string>
    <string name="my_profileSTDNav">My Profile</string>
    <string name="profilepictureSTDMA">profilePicture</string>
    <string name="student_nameSTDMA">Student Name</string>
    <string name="index_noSTDMA">Index No</string>
    <string name="select_classSTDMA">Select Class</string>
    <string name="enter_class_codeSTDMA">Enter Class Code</string>
    <string name="enter_passwordSTDMA">Enter Password</string>
    <string name="buttonSTMMA">Button</string>
    <string name="mark_presentSTDMA">Mark Present</string>
    <string name="class_feeSTDMF">Class Fee</string>
    <string name="mobile_noSTD">Mobile no</string>
    <string name="emailSTD">Email</string>
    <string name="dobSTD">DOB</string>
    <string name="title_activity_new_student_navigation">NewStudentNavigation</string>
    <string name="d_o_bSTD">D.O.B</string>
    <string name="submitClassss">Submit</string>
    <string name="register_student">register student</string>
    <string name="NewClassTDNav">New Class</string>


    <!--Class function strings-->
    <string name="viewClassTitle">Classes</string>
    <string name="nextClass">Next Class</string>
    <string name="editClass">Edit Class</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name77486">Name</string>
    <string name="divya1">Password</string>
    <string name="divyaEmail">Email</string>
    <string name="DivyaAdd">Address</string>
    <string name="namebla">Name</string>
    <string name="bfre">First Name</string>
    <string name="locationbff">Location</string>
    <string name="attendace_app">Attendace App</string>
    <string name="institute_dashboard">Institute Dashboard</string>
    <string name="dashboard">Dashboard</string>
    <string name="class_manager">Class Manager</string>
    <string name="log_out">Log Out</string>
    <string name="institute_details">Institute Details</string>
    <string name="edit_details">Edit Details</string>
    <string name="save">Save</string>
    <string name="student_Manager">Student Manager</string>
    <string name="sendRewq">Send Request</string>

</resources>
