<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_MyClassesSTD"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/my_classesSTDnav" />
        <item
            android:id="@+id/nav_MarkAttendSTDNav"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/locationbff" />
        <item
            android:id="@+id/nav_FeesSTDNav"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/pay_feesSTDNav" />

        <item
            android:id="@+id/nav_NewClassTDNav"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/NewClassTDNav" />
    </group>

    <item android:title="@string/ProfileDetailsSTDNav">
        <menu>
            <item
                android:id="@+id/nav_profileSTDNav"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/my_profileSTDNav" />
        </menu>
    </item>

</menu>
