<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mark"
    android:orientation="vertical"
    android:padding="10dp"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewStudentNavigation">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:contentDescription="@string/profilepictureSTDMA"
                app:srcCompat="@drawable/login1" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:text="@string/full_name" />

            <EditText
                android:id="@+id/txt_fName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/namebla" />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:text="Subject" />

            <EditText
                android:id="@+id/txt_Subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name77486" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:text="@string/DivyaAdd" />

            <EditText
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:text="@string/divyaEmail" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />
            <TextView
                android:id="@+id/textView9"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:text="@string/divya1" />


            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true" />
            <TextView
                android:id="@+id/textView10"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:text="@string/mobile_noSTD" />


            <EditText
                android:id="@+id/txt_mobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"

                app:passwordToggleEnabled="true" />












            <Button

                android:layout_width="150dp"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_rounded"
                android:onClick="updateTeacher"
                android:text="update"
                android:textColor="#FFFFFF" />

            <Button

                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_rounded"
                android:gravity="center"
                android:onClick="deleteTeacher"
                android:padding="10dp"
                android:text="Delete Account"
                android:textColor="#FFFFFF" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
