<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewStudentNavigation"
    tools:showIn="@layout/app_bar_new_student_navigation"
    android:background="@drawable/mark">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

           <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:contentDescription="@string/profilepictureSTDMA"
                app:srcCompat="@drawable/login1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:text="@string/bfre"
                 />

            <EditText
                android:id="@+id/txt_fName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/namebla" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:text="Last Name"
                 />

            <EditText
                android:id="@+id/txt_lName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name77486" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:text="@string/DivyaAdd"
                 />


            <EditText
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:text="@string/divyaEmail"
                 />



            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:text="@string/divya1"
                 />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                app:passwordToggleEnabled="true"
                android:inputType="textPassword" />

            <Button

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/button_rounded"
                android:onClick="updateStudent"
                android:text="update"
                android:textColor="#FFFFFF" />


            <Button

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/button_rounded"
                android:onClick="deleteStudent"
                android:text="Delete Account"
                android:textColor="#FFFFFF" />





        </LinearLayout>
    </ScrollView>

</LinearLayout>
